* In development mode, disable session filter for static files. This may    prevent some session deadlock errors.  * Fixed some bugs with the new auto-resizing toolbar:    * In IE 6/7, when you click on a formatting button such as italics, it      doesn't visibly depress, because update_toolbar() is causing it to      unpress until you start typing the italic text. Fixed by only calling      update_toolbar() in focused_editor() if focused_editor is null.    * When downing or upping a toolbar button, now calling      resize_toolbar_button() unconditionally.

--- a/static/css/ie6.css
+++ b/static/css/ie6.css
@@ -4,13 +4,13 @@
 
 #toolbar {
   position: absolute;
-  width: expression( eval( document.all.center_area && ( document.all.center_area.offsetLeft - 50 ) || 0 ) );
+  width: expression( eval( document.all.center_area && ( document.all.center_area.offsetLeft - 60 ) || 0 ) );
   text-align: right;
 }
 
 #note_tree_area {
   left: 0;
-  width: expression( eval( document.all.center_area && ( document.all.center_area.offsetLeft - 50 ) || 0 ) );
+  width: expression( eval( document.all.center_area && ( document.all.center_area.offsetLeft - 60 ) || 0 ) );
   position: absolute;
   top: expression( eval( document.compatMode && document.compatMode == 'CSS1Compat' ) ? documentElement.scrollTop + 80 : document.body.scrollTop + 80 );
 }
